# Sudo-agent

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  bench_latency.py  pyproject.toml  sudo_audit.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.venv_release/: pyvenv.cfg
.venv_release/Scripts/: activate  activate.bat
docs/: adapters.md  architecture.md  faq.md  oss_guide.md  quickstart.md  threat_test_matrix.md  v2_ledger.md  v2_spec.md
examples/: async_approver_demo.py  autogen_adapter.py  crewai_adapter.py  custom_logger.py  custom_policy.py  langchain_adapter.py  non_interactive_deny.py  quickstart.py  v2_demo.py  workflow_demo.py
src/sudoagent/: __init__.py  approvals.py  approvals_store.py  async_engine.py  async_utils.py  budgets.py  cli.py  engine.py  errors.py  policies.py  protocols.py  reason_codes.py  redaction.py  types.py
src/sudoagent/adapters/: __init__.py  autogen.py  langchain.py  sync_to_async.py
src/sudoagent/approvals/: __init__.py  async_store.py  common.py
src/sudoagent/ledger/: __init__.py  base.py  canonical.py  common.py  errors.py  filelock.py  jcs.py  jsonl.py  signing.py  sqlite.py  types.py  validation.py  versioning.py
src/sudoagent/loggers/: base.py  jsonl.py
src/sudoagent/notifiers/: __init__.py  async_approvers.py  base.py  interactive.py
tests/: conftest.py  test_adapters.py  test_approvals_store.py  test_async_approvers.py  test_async_engine.py  test_async_utils.py  test_budgets.py  test_canonical.py  test_cli_export.py  test_cli_signing.py  test_cli_verify.py  test_engine.py  test_jcs_vectors.py  test_ledger_jsonl.py  test_ledger_signing.py  test_ledger_sqlite.py  test_redaction.py  test_smoke.py  test_types.py
