[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoagent"
version = "0.1.1"
description = "Policy-driven approval library with interactive flows and audit logging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "rich>=13",
]
authors = [
  { name = "Naol Beyene" },
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.setuptools.package-data]
sudoagent = ["py.typed"]
