[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoagent"
version = "2.0.0"
description = "Runtime guardrail for tool/function calls: policy, optional approval, and a verifiable ledger."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "rich>=13",
  "rfc8785>=0.1.0",
]
authors = [
  { name = "Naol Beyene" },
]
license = { file = "LICENSE" }
keywords = ["agents", "policy", "approval", "audit", "ledger", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/lemnk/Sudo-agent"
Repository = "https://github.com/lemnk/Sudo-agent"
Issues = "https://github.com/lemnk/Sudo-agent/issues"
Changelog = "https://github.com/lemnk/Sudo-agent/blob/main/CHANGELOG.md"
Security = "https://github.com/lemnk/Sudo-agent/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "types-cryptography",
]
crypto = ["cryptography>=41"]
langchain = ["langchain"]
crewai = ["crewai"]
autogen = ["autogen"]
all = ["cryptography>=41", "langchain", "crewai", "autogen"]

[project.scripts]
sudoagent = "sudoagent.cli:main"

[tool.setuptools.package-data]
sudoagent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
tmp_path_retention_policy = "all"
tmp_path_retention_count = 0
